Actions
Bug #11752
closedinet/cc.h should be shipped
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
The new inet/cc.h header file should be shipped in the system/header
package.
bloody% echo '#include <inet/ipclassifier.h>^Mmain(){}' >| c.c bloody% gcc -o c c.c In file included from /usr/include/inet/ipclassifier.h:41, from c.c:1: /usr/include/inet/tcp.h:49:10: fatal error: inet/cc.h: No such file or directory #include <inet/cc.h> ^~~~~~~~~~~ compilation terminated.
Related issues
Updated by Andy Fiddaman almost 3 years ago
- Related to Bug #11553: Want pluggable TCP congestion control algorithms added
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 8f97fda43d3ec24e515449b83c8a970b9042030a
commit 8f97fda43d3ec24e515449b83c8a970b9042030a Author: Andy Fiddaman <omnios@citrus-it.co.uk> Date: 2019-09-27T15:29:09.000Z 11752 inet/cc.h should be shipped Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Matthias Scheler <matthias.scheler@wdc.com> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions